--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "hardhat": "^2.9.2"
+    "@defi-wonderland/smock": "^2.0.7",
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "balancer-core": "^0.0.8",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.2",
+    "hardhat": "^2.9.2",
+    "hardhat-deploy": "^0.11.2",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.8",
+    "i": "^0.3.7",
+    "npm": "^8.5.5",
+    "solidity-coverage": "^0.7.20"
   }
 }
