--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@gnosis.pm/safe-core-sdk": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-truffle5": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "balancer-core": "^0.0.8",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
@@ -20,6 +20,7 @@
     "hardhat-gas-reporter": "^1.0.8",
     "i": "^0.3.7",
     "npm": "^8.5.5",
-    "solidity-coverage": "^0.7.20"
+    "solidity-coverage": "^0.7.20",
+    "web3": "^1.7.1"
   }
 }
