--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "hardhat-project",
+  "name": "majoritarianism-playdate",
+  "scripts": {
+    "deploy:contracts:rinkeby": "npx hardhat run --network rinkeby ./scripts/deploy-rinkeby.js",
+    "compile": "hardhat compile",
+    "format": "npx prettier --write \"**/*.js\" \"**/*.sol\"",
+    "test": "hardhat test",
+    "coverage": "hardhat coverage"
+  },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
     "@gnosis.pm/safe-contracts": "^1.3.0",
     "@gnosis.pm/safe-core-sdk": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-truffle5": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -15,7 +22,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
     "hardhat": "^2.9.2",
-    "hardhat-deploy": "^0.11.2",
+    "hardhat-deploy": "^0.11.4",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
     "i": "^0.3.7",
